fix(theme-classic): fix admonition optical spacing
- Render admonition content `<div />` only when children are present
- Apply bottom margin only when admonition content exists
- Apply proper optics of the inlined SVG icon and re-calculate margins
to compensate for changes
- Narrow scope of `BrowserWindow` selector
- Document example

--- a/packages/docusaurus-theme-classic/src/theme/Admonition/Layout/styles.module.css
+++ b/packages/docusaurus-theme-classic/src/theme/Admonition/Layout/styles.module.css
@@ -13,7 +13,10 @@
   font: var(--ifm-heading-font-weight) var(--ifm-h5-font-size) /
     var(--ifm-heading-line-height) var(--ifm-heading-font-family);
   text-transform: uppercase;
-  margin-bottom: 0.3rem;
+}
+
+.admonitionHeading:not(:last-child) {
+  margin-bottom: 0.5625rem;
 }
 
 .admonitionHeading code {
@@ -22,13 +25,15 @@
 
 .admonitionIcon {
   display: inline-block;
-  vertical-align: middle;
-  margin-right: 0.4em;
+  vertical-align: baseline;
+  margin-right: 0.575em;
 }
 
 .admonitionIcon svg {
   display: inline-block;
   height: 1.6em;
+  margin: -0.1875em;
+  vertical-align: bottom;
   width: 1.6em;
   fill: var(--ifm-alert-foreground-color);
 }
